--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Church of England -- Clergy -- Correspondence'
 - !lcsh 'Robinson, Forbes, 1867-1904 -- Correspondence'
 - !lcc 'BX'
+- GITenberg
 title: Letters to His Friends
 url: http://www.gutenberg.org/ebooks/20560
